--- a/templates/GenespotRE/user_gcp_list_modals.html
+++ b/templates/GenespotRE/user_gcp_list_modals.html
@@ -4,7 +4,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Unregister this Google Cloud Project "{{ project.project_name }}"?</h4>
+                <h4 id="delete-project-header" class="modal-title">Unregister this Google Cloud Project "{{ project.project_name }}"?</h4>
             </div>
             <form id="delete-project" method="POST" action="{% url 'user_gcp_delete' user.id project.id %}">
                 <div class="modal-body">
@@ -29,14 +29,14 @@
 
 {% for service_account in project.serviceaccount_set.all %}
 <!-- Delete Service Account Modal -->
-<div class="modal fade" id="delete-sa-modal-{{ service_account.id }}" tabindex="-1" role="dialog" aria-labelledby="delete-project-header" aria-hidden="true">
+<div class="modal fade" id="delete-sa-modal-{{ service_account.id }}" tabindex="-1" role="dialog" aria-labelledby="delete-sa-header" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Unregister this Service Account?</h4>
+                <h4 id="delete-sa-header" class="modal-title">Unregister this Service Account?</h4>
             </div>
-            <form id="delete-project" method="POST" action="{% url 'delete_sa' user.id service_account.id %}">
+            <form id="delete-sa" method="POST" action="{% url 'delete_sa' user.id service_account.id %}">
                 <div class="modal-body">
                     {% csrf_token %}
                     <p>
@@ -53,14 +53,14 @@
 </div>
 
 <!-- Refresh Service Account Modal -->
-<div class="modal fade" id="refresh-sa-modal-{{ service_account.id }}" tabindex="-1" role="dialog" aria-labelledby="delete-project-header" aria-hidden="true">
+<div class="modal fade" id="refresh-sa-modal-{{ service_account.id }}" tabindex="-1" role="dialog" aria-labelledby="refresh-sa-header" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Refresh this Service Account?</h4>
+                <h4 id="refresh-sa-header" class="modal-title">Refresh this Service Account?</h4>
             </div>
-            <form id="delete-project" method="POST" action="{% url 'register_sa' user.id %}">
+            <form id="refresh-sa" method="POST" action="{% url 'register_sa' user.id %}">
                 <div class="modal-body">
                     {% csrf_token %}
                     <p>
@@ -69,6 +69,7 @@
                     <input type="hidden" name="gcp_id" value="{{ project.project_id }}" />
                     <input type="hidden" name="user_sa" value="{{ service_account.service_account }}" />
                     <input type="hidden" name="datasets" value="{{ service_account.get_auth_datasets|get_id_string:"," }}" />
+                    <input type="hidden" name="is_refresh" value="true" />
                 </div>
                 <div class="modal-footer">
                     <input type="submit" value="Refresh" class="btn btn-primary" />
