--- a/templates/variables/variable_detail.html
+++ b/templates/variables/variable_detail.html
@@ -74,7 +74,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 id="delete-favorite-header" class="modal-title">Delete this variable favorite "{{ variables.name|title }}"?</h4>
             </div>
-            <form id="delete-workbook" method="POST" action="{% url 'variable_fav_delete' variables.id %}">
+            <form id="delete-favorite" method="POST" action="{% url 'variable_fav_delete' variables.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
                     <input type="submit" value="Delete" class="btn btn-primary" />
