--- a/templates/variables/variable_list_modals.html
+++ b/templates/variables/variable_list_modals.html
@@ -6,7 +6,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="delete-var-fave-header">Delete this variable favorite "{{ favorite.name|title }}"?</h4>
             </div>
-            <form id="delete-workbook" method="POST" action="{% url 'variable_fav_delete' favorite.id %}">
+            <form id="delete-var-fave" method="POST" action="{% url 'variable_fav_delete' favorite.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
                     <input type="submit" value="Delete" class="btn btn-primary" />
