-> On the cohort list page, you can only see how many users a cohort is shared with if you are an owner -> On the workbook detail page, you cannot share a workbook if it contains components (cohort, variable list, gene list) which you do not own

--- a/templates/cohorts/cohort_list.html
+++ b/templates/cohorts/cohort_list.html
@@ -102,10 +102,10 @@
                                     {% endif %}
                                 </td>
                                 <td class="share-col">
-                                    {% if cohort.shared_with_users|length %}
-                                        ( <a data-toggle="modal" data-target="#share-cohorts-modal" data-cohort-id="{{ cohort.id }}" class="shared">{{cohort.shared_with_users|length}}</a> )
+                                    {% if request.user.id == cohort.owner.id %}
+                                        ( {% if cohort.shared_with_users|length %}<a data-toggle="modal" data-target="#share-cohorts-modal" data-cohort-id="{{ cohort.id }}" class="shared">{{cohort.shared_with_users|length}}</a>{% else %}0{% endif %} )
                                     {% else %}
-                                        ( 0 )
+                                        You
                                     {% endif %}
                                 </td>
                                 <td>
