--- a/templates/workbooks/workbook_modals.html
+++ b/templates/workbooks/workbook_modals.html
@@ -169,7 +169,7 @@
 
 <!-- Only workbook owners have access to the sharing modal -->
 {% if workbook.owner.id == request.user.id %}
-    {% if is_shareable or shared %}
+    {% if is_shareable %}
     <!-- Share Workbook Modal -->
     <div class="ajax-form-modal share-workbook-modal modal fade" id="share-workbook-modal-{{ workbook.id }}" tabindex="-1" role="dialog" aria-labelledby="share-workbook-header" aria-hidden="true">
         <div class="modal-dialog">
