--- a/templates/projects/program_modals.html
+++ b/templates/projects/program_modals.html
@@ -71,77 +71,78 @@
 </div>
 {% endif %}
 
-{#<!-- Share Program Modal -->#}
-{#<div class="modal fade" id="share-program-modal" tabindex="-1" role="dialog" aria-labelledby="delete-program-header" aria-hidden="true">#}
-{#    <div class="modal-dialog">#}
-{#        <div class="modal-content">#}
-{#            <div class="modal-header">#}
-{#                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>#}
-{#                <!--<h4 class="modal-title">Program Sharing</h4>-->#}
-{#                <ul class="nav nav-tabs" data-tabs="tablist">#}
-{#                    {% if program.owner == request.user %}#}
-{#                        <li class="active"><a href="#share" data-toggle="tab">Share</a></li>#}
-{#                    {% endif %}#}
-{#                    <li class="{% if not program.owner == request.user %}active{% endif %}"><a href="#shared-with" data-toggle="tab">Shared With</a></li>#}
-{#                </ul>#}
-{#            </div>#}
-{#            <div class="tab-content">#}
-{#                {% if program.owner == request.user %}#}
-{#                <form class="tab-pane fade in active" id="share" method="POST" action="{% url 'program_share' program.id %}">#}
-{#                    {% csrf_token %}#}
-{#                    <div class="modal-body">#}
-{#                        <p>#}
-{#                            This will share the web view of the program.  This will not share the underlying Google cloud program#}
-{#                            and big query data needed if you wish to access this program outside of the website.#}
-{#                        </p>#}
-{#                        <label for="share-users">Enter email addresses separated by a comma</label>#}
-{#                        <textarea class="form-control" name="share_users"></textarea>#}
-{#                    </div>#}
-{#                    <div class="modal-footer">#}
-{#                        <input type="submit" value="Send" class="btn btn-primary" />#}
-{#                        <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>#}
-{#                    </div>#}
-{#                </form>#}
-{#                {% endif %}#}
-{#                <div class="tab-pane fade {% if not program.owner == request.user %}active in{% endif %}" id="shared-with">#}
-{#                    <div class="modal-body">#}
-{#                        {% if program.shared.count > 0 %}#}
-{#                        <table class="table table-striped">#}
-{#                            <thead>#}
-{#                                <tr>#}
-{#                                    <th>Name</th>#}
-{#                                    <th>Email</th>#}
-{#                                </tr>#}
-{#                            </thead>#}
-{#                            <tbody>#}
-{#                            {% for shared in program.shared.all %}#}
-{#                                <tr>#}
-{#                                    <td>#}
-{#                                        {% if shared.matched_user %}#}
-{#                                        {{shared.matched_user.first_name}} {{shared.matched_user.last_name}}#}
-{#                                        {% endif %}#}
-{#                                    </td>#}
-{#                                    <td>#}
-{#                                        {{shared.email}}#}
-{#                                    </td>#}
-{#                                    <td>#}
-{#                                        {% if program.owner == request.user %}#}
-{#                                        <a class="remove-shared-user" role="button" data-shared-id="{{ shared.id }}"><i class="fa fa-times"></i></a>#}
-{#                                        {% endif %}#}
-{#                                    </td>#}
-{#                                </tr>#}
-{#                            {% endfor %}#}
-{#                            </tbody>#}
-{#                        </table>#}
-{#                        {% else %}#}
-{#                        <p class="center">This list is empty.</p>#}
-{#                        {% endif %}#}
-{#                    </div>#}
-{#                    <div class="modal-footer">#}
-{#                        <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#</div>#}
+{% if program.owner == request.user %}
+<!-- Share Program Modal -->
+<div class="modal fade" id="share-program-modal" tabindex="-1" role="dialog" aria-labelledby="delete-program-header" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Program Sharing</h4>
+                <div id="share-modal-js-messages"></div>
+                <ul class="nav nav-tabs" data-tabs="tablist">
+                    {% if program.owner == request.user %}
+                        <li class="active"><a href="#share" data-toggle="tab">Share</a></li>
+                    {% endif %}
+                    <li class="{% if not program.owner == request.user %}active{% endif %}"><a href="#shared-with" data-toggle="tab">Shared With</a></li>
+                </ul>
+            </div>
+            <div class="tab-content">
+                <form class="tab-pane fade in active" id="share" method="POST" action="{% url 'program_share' program.id %}">
+                    {% csrf_token %}
+                    <div class="modal-body">
+                        <p>
+                            This will share the web view of the program.  This will not share the underlying Google cloud program
+                            and big query data needed if you wish to access this program outside of the website.
+                        </p>
+                        <label for="share-users">Enter email addresses separated by a comma</label>
+                        <textarea class="form-control" name="share_users"></textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="submit" value="Send" class="btn btn-primary" />
+                        <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
+                    </div>
+                </form>
+                <div class="tab-pane fade" id="shared-with">
+                    <div class="modal-body">
+                        {% if program.shared.count > 0 %}
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Email</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for shared in program.shared.all %}
+                                <tr>
+                                    <td>
+                                        {% if shared.matched_user %}
+                                        {{shared.matched_user.first_name}} {{shared.matched_user.last_name}}
+                                        {% endif %}
+                                    </td>
+                                    <td>
+                                        {{shared.email}}
+                                    </td>
+                                    <td>
+                                        {% if program.owner == request.user %}
+                                        <a class="remove-shared-user" role="button" data-shared-id="{{ shared.id }}"><i class="fa fa-times"></i></a>
+                                        {% endif %}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                        {% else %}
+                        <p class="center">This list is empty.</p>
+                        {% endif %}
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
