--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -29,8 +29,12 @@
             <li role="menuitem"><button class="btn btn-info {% if not workbook.build %}disabled{% endif %}" data-toggle="modal" data-target="{% if workbook.build %}#copy-workbook-modal-{{ workbook.id }}{% endif %}">Duplicate</button></li>
             <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#delete-workbook-modal-{{ workbook.id }}">Delete</button></li>
             <li class="separator"></li>
+            {% if is_shareable %}
             <li role="menuitem"><button class="btn btn-info share-modal" data-toggle="modal" data-target="#share-workbook-modal-{{ workbook.id }}">Share</button></li>
             <li role="menuitem"><button class="btn btn-link shared-with" data-toggle="modal" data-target="#share-workbook-modal-{{ workbook.id }}">Shared with (<span class="share-count">{{ workbook.shared.all|shared_active_count }}</span>)</button></li>
+            {% else %}
+            <li role="menuitem" title="This workbook cannot be shared because you are not the owner of some components (cohort, variable list, gene list)."><button class="btn btn-info disabled">Share</button></li>
+            {% endif %}
         {% elif workbook.is_public %}
             {# Is a public workbook #}
             <li><h4>Public Workbook</h4></li>
