--- a/templates/projects/program_modals.html
+++ b/templates/projects/program_modals.html
@@ -79,7 +79,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="share-program-header">Program Sharing</h4>
-                <div id="share-program-js-messages"></div>
+                <div class="modal-js-messages" id="share-program-js-messages"></div>
                 <ul class="nav nav-tabs" data-tabs="tablist">
                     <li class="active"><a class="share" href="#share" data-toggle="tab">Share</a></li>
                     <li><a class="shared-with" href="#shared-with" data-toggle="tab">Shared With</a></li>
