- Show the actual error message we receive from the server when attempting to verify a GCP

--- a/templates/GenespotRE/register_gcp.html
+++ b/templates/GenespotRE/register_gcp.html
@@ -39,7 +39,8 @@
             <div class="col-lg-12 verify-error" style="display: none;">
                 <div class="alert alert-warning alert-dismissible">
                     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    There was an error accessing your Google Cloud Project. Please ensure that you have followed the instructions correctly and try again.
+                    <span id="verify-error-text"></span>
+                    <span id="verify-error-base">There was an error accessing your Google Cloud Project. Please ensure that you have followed the instructions correctly and try again.</span>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12">
