--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -53,6 +53,35 @@
         </p>
 
     {% endif %}
+
+    {# If we're associated with an NIH account but not active, include the unlinking dialog #}
+    {% if user_details.NIH_username and not user_details.NIH_active %}
+    <div class="modal fade" id="unlink-nih-account-modal" tabindex="-1" role="dialog" aria-labelledby="unlink-nih-account-header" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="unlink-nih-account-header">Unlink {{ user_details.email }} from the NIH identity '{{ user_details.NIH_username }}'?</h4>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        This will remove your access to any controlled access datasets. In addition, service accounts from Google Cloud Projects you are associated with
+                        which were accessing controlled access data will also lose their access to controlled access datasets.
+                    </p>
+                </div>
+                <form id="unlink-nih-account" method="GET" action="{% url 'unlink_accounts' %}">
+                    {% csrf_token %}
+                    <div class="modal-footer">
+                        <input type="submit" value="Unlink" class="btn btn-primary" />
+                        <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    {% endif %}
+
     <script type="text/javascript"> 
             var NIH_assertion_expiration_client_time = new Date("{{ user_details.NIH_assertion_expiration|safe }}".replace(" ","T"));
             document.getElementById('NIH_expiration').innerHTML = NIH_assertion_expiration_client_time; 
