--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -19,6 +19,9 @@
         margin: 0 0 5px 0
       ul
         margin-left: 5px
+      li
+        text-overflow: ellipsis
+        overflow: hidden
       float: right
       width: 40%
       margin-bottom: 10px
