--- a/templates/cohorts/user-data.html
+++ b/templates/cohorts/user-data.html
@@ -36,6 +36,7 @@
                                             <li class="checkbox">
                                                 <label>
                                                     <input type="checkbox" name="elements-selected" data-user-program-id="{{ v.program }}" data-value-name="{{ v.name }}"
+                                                           id="{% if v.full_id %}0-{{ v.full_id }}{% endif %}"
                                                            data-value-id="{% if v.id %}{{ v.id }}{% elif v.name %}{{ v.name }}{% else %}{{ v.value }}{% endif %}"
                                                            data-value-displ-name="{% if v.display_name %}{{ v.displ_name }}{% elif v.name %}{{ v.name }}{% else %}{{ v.id }}{% endif %}">
                                                     {% if v.display_name %}{{ v.displ_name }}{% elif v.name %}{{ v.name }}{% else %}{{ v.id }}{% endif %} <span class="count">({{ v.count }})</span>
@@ -75,6 +76,7 @@
                                                 <li class="checkbox">
                                                     <label>
                                                         <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}"
+                                                               id="{% if v.full_id %}0-{{ v.full_id }}{% endif %}"
                                                                data-value-id="{% if v.id %}{{ v.id }}{% elif v.name %}{{ v.name }}{% else %}{{ v.value }}{% endif %}"
                                                                data-value-displ-name="{% if v.display_name %}{{ v.displ_name }}{% elif v.name %}{{ v.name }}{% else %}{{ v.id }}{% endif %}">
                                                         {% if v.display_name %}{{ v.displ_name }}{% elif v.name %}{{ v.name }}{% else %}{{ v.id }}{% endif %} <span class="count">({{ v.count }})</span>
