--- a/templates/GenespotRE/user_gcp_list_modals.html
+++ b/templates/GenespotRE/user_gcp_list_modals.html
@@ -40,7 +40,7 @@
                 <div class="modal-body">
                     {% csrf_token %}
                     <p>
-                        <em>Note</em>: By unregistering this Service Account, you are only revoking its access to the specified dataset.
+                        <em>Note</em>: By unregistering this Service Account, you are only revoking its access to controlled access datasets.
                     </p>
                 </div>
                 <div class="modal-footer">
