-> Visual improvements to BQ table display

--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -15,7 +15,9 @@
   .panel-heading
     min-height: 100px
     .bq-tables
-      max-hwight: 90px
+      max-height: 90px
+      padding: 5px
+      border: 2px solid $isb-primary
       h5
         margin: 0 0 5px 0
       ul
